finalize project with web interface.

--- a/Palindrome/Views/index.cshtml
+++ b/Palindrome/Views/index.cshtml
@@ -8,9 +8,10 @@
   <body>
     <div>
       <form action="/output" method="post">
-        <label for=""></label>
-        <input type="button" name="name" value="">
-        <button type="submit"></button>
+        <label for="wordInput"></label>
+        <input type="text" name="wordInput"></input>
+        <br><br>
+        <button type="submit">Check if a word is a Palidrome</button>
       </form>
     </div>
   </body>
